--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -4,25 +4,40 @@
 <h2>Create</h2>
 
 <form asp-action="Create">
+
     <div class="form-group">
-        <label asp-for="Score" class="control-label"></label>
-        <input asp-for="Score" class="form-control" />
-        <span asp-validation-for="Score" class="text-danger"></span>
+        <label asp-for="candidateDTO.Id" class="control-label">Candidate Name</label>
+        @Html.DropDownListFor(model => model.candidateDTO.Id, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
+        <span asp-validation-for="candidateDTO.Id" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="positionDTO.Id" class="control-label">Position</label>
+        @Html.DropDownListFor(model => model.positionDTO.Id, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control" })
+        <span asp-validation-for="positionDTO.Id" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="InterviewerId" class="control-label"></label>
+        <input asp-for="InterviewerId" class="form-control" />
+        <span asp-validation-for="InterviewerId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Date" class="control-label"></label>
         <input asp-for="Date" class="form-control" />
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
-    <div class="form-group">
+    <div class="form-group" hidden>
         <label asp-for="ParentId" class="control-label"></label>
         <input asp-for="ParentId" class="form-control" />
         <span asp-validation-for="ParentId" class="text-danger"></span>
     </div>
+
+
     <div class="form-group">
-        <label asp-for="CandidateId" class="control-label"></label>
-        <input asp-for="CandidateId" class="form-control" />
-        <span asp-validation-for="CandidateId" class="text-danger"></span>
+        <label asp-for="Score" class="control-label"></label>
+        <input asp-for="Score" class="form-control" />
+        <span asp-validation-for="Score" class="text-danger"></span>
     </div>
 
     <div class="form-group">
