--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -6,17 +6,24 @@
     <h4>Interview</h4>
     <hr />
     <dl class="row">
+
         <dt class="col-sm-2">
-            Interview ID
+            Candidate Name
         </dt>
         <dd class="col-sm-10">
-            @Model.InterviewsId
+            @Model.FullName
         </dd>
         <dt class="col-sm-2">
-            Score
+            Postion
         </dt>
         <dd class="col-sm-10">
-            @Model.Score
+            @Model.Name
+        </dd>
+        <dt class="col-sm-2">
+            Interviewer ID
+        </dt>
+        <dd class="col-sm-10">
+            @Model.InterviewerId
         </dd>
         <dt class="col-sm-2">
             Date
@@ -24,17 +31,18 @@
         <dd class="col-sm-10">
             @Model.Date
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-2" hidden>
             Parent ID
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10" hidden>
             @Model.ParentId
         </dd>
+
         <dt class="col-sm-2">
-            Candidate ID
+            Score
         </dt>
         <dd class="col-sm-10">
-            @Model.CandidateId
+            @Model.Score
         </dd>
         <dt class="col-sm-2">
             Status
@@ -48,8 +56,8 @@
         <dd class="col-sm-10">
             @Model.Notes
         </dd>
-     
-      
+
+
     </dl>
 </div>
 <div class="form-group">
