--- a/CMS/CMS.Web/Views/Notifications/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.SendDate)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Title)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
         </dt>
         <dd class="col-sm-10">
