--- a/CMS/CMS.Web/Views/Notifications/Details.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Details.cshtml
@@ -12,6 +12,9 @@
    @*  <dt class="col-sm-2">Is Received:</dt>
     <dd class="col-sm-10">@Model.IsReceived</dd>
  *@
+    <dt class="col-sm-2">Title:</dt>
+    <dd class="col-sm-10">@Model.Title</dd>
+
     <dt class="col-sm-2">Type:</dt>
     <dd class="col-sm-10">@Model.Type</dd>
 </dl>
