--- a/CMS/CMS.Web/Views/Candidates/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Edit.cshtml
@@ -15,10 +15,22 @@
         <span asp-validation-for="Phone" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="DesiredPosition" class="control-label"></label>
-        <input asp-for="DesiredPosition" class="form-control" />
-        <span asp-validation-for="DesiredPosition" class="text-danger"></span>
+
+        <label asp-for="PositionId" class="control-label"></label>
+        @if (ViewBag.positions != null)
+        {
+            <select asp-for="PositionId"  class="form-control">
+                <option value=""> Position</option>
+                @foreach (var pos in ViewBag.positions)
+                {
+                    <option value="@pos.Value" selected="@(pos.Value == Model.PositionId.ToString())">@pos.Text</option>
+                }
+
+            </select>
+        }
+        <span asp-validation-for="PositionId" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Email" class="control-label"></label>
         <input asp-for="Email" class="form-control" />
