--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -48,7 +48,7 @@
             Status
         </dt>
         <dd class="col-sm-10">
-            @Model.Status
+            @Model.StatusName
         </dd>
         <dt class="col-sm-2">
             Notes
