--- a/CMS/CMS.Web/Views/Position/GetPositions.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetPositions.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<CMS.Application.DTOs.PositionDTO>
+﻿@model IEnumerable<CMS.Application.DTOs.PositionDTO>
+
 
 <h1>Positions</h1>
 <p><a asp-action="AddPosition">add a new position</a></p>
@@ -13,6 +14,7 @@
         </tr>
     </thead>
     <tbody>
+        @if(Model!=null)
         @foreach(var pos in Model)
         {
             <tr>
