--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -3,18 +3,18 @@
 
 <h2>Create</h2>
 
-<form asp-action="Create">
-
+<form asp-action="Create" >
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="candidateDTO.Id" class="control-label">Candidate Name</label>
-        @Html.DropDownListFor(model => model.candidateDTO.Id, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
-        <span asp-validation-for="candidateDTO.Id" class="text-danger"></span>
+        <label asp-for="candidateId" class="control-label">Candidate Name</label>
+        @Html.DropDownListFor(model => model.candidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
+        <span asp-validation-for="candidateId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="positionDTO.Id" class="control-label">Position</label>
-        @Html.DropDownListFor(model => model.positionDTO.Id, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control" })
-        <span asp-validation-for="positionDTO.Id" class="text-danger"></span>
+        <label asp-for="positionId" class="control-label">Position</label>
+        @Html.DropDownListFor(model => model.positionId, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control" })
+        <span asp-validation-for="positionId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -27,38 +27,56 @@
         <input asp-for="Date" class="form-control" />
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
-    <div class="form-group" hidden>
+    <div class="form-group" @*hidden*@>
         <label asp-for="ParentId" class="control-label"></label>
         <input asp-for="ParentId" class="form-control" />
         <span asp-validation-for="ParentId" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
 
+        <label asp-for="StatusId" class="control-label">Status</label>
+        @if (ViewBag.StatusDTOs != null)
+        {
+            <select asp-for="StatusId" asp-items="@(ViewBag.StatusDTOs)" class="form-control">
+                <option value="">Select a Status</option>
+
+            </select>
+        }
+        else
+        {
+            <p>No statuses available.</p>
+        }
+        <span asp-validation-for="StatusId" class="text-danger"></span>
+
+    </div>
+
+@*
     <div class="form-group">
         <label asp-for="Score" class="control-label"></label>
         <input asp-for="Score" class="form-control" />
         <span asp-validation-for="Score" class="text-danger"></span>
     </div>
-
-    <div class="form-group">
+*@
+   @* <div class="form-group">
         <label asp-for="Status" class="control-label"></label>
         <select asp-for="Status" asp-items="Html.GetEnumSelectList<InterviewStatus>()" class="form-control">
             <option value="">Select Status</option>
         </select>
         <span asp-validation-for="Status" class="text-danger"></span>
-    </div>
+    </div>*@
 
-    <div class="form-group">
+  @*  <div class="form-group">
         <label asp-for="Notes" class="control-label"></label>
         <input asp-for="Notes" class="form-control" />
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
-
+*@
     <div class="form-group">
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+       
         <input type="submit" value="Create" class="btn btn-outline-primary" />
     </div>
 
-  
-
 </form>
+<a class="btn btn-secondary" asp-action="Index">Back to List</a>
+<p>@Html.ValidationSummary()</p>
