--- a/CMS/CMS.Web/Views/Interviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Index.cshtml
@@ -6,6 +6,7 @@
     <a asp-action="Create" class="btn btn-outline-primary font-italic">Create New</a>
 </p>
 
+
 <table class="datatable">
     <thead>
         <tr>
@@ -18,7 +19,7 @@
             <th>
                 Date
             </th>
-            <th hidden>
+            <th @*hidden*@>
                 Parent ID
             </th>
 
@@ -30,6 +31,7 @@
             </th>
             <th>Notes</th>
             <th>Actions</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -46,24 +48,32 @@
                 <td>
                     @item.Date
                 </td>
-                <td hidden>
+                <td @*hidden*@>
                     @item.ParentId
                 </td>
-
 
                 <td>
                     @item.Score
                 </td>
                 <td>
-                    @item.Status
+                    @item.StatusName 
                 </td>
 
                 <td>@item.Notes</td>
+
 
                 <td>
                     <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId"></a> |
                     <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> |
                     <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId"></a>
+
+                </td>
+                <td>
+                    @if (item.StatusId == 5)
+                    {
+                        <a asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId"> Add the interview Result</a>
+
+                    }
                 </td>
             </tr>
         }
