--- a/CMS/CMS.Web/Views/Register/Create.cshtml
+++ b/CMS/CMS.Web/Views/Register/Create.cshtml
@@ -3,23 +3,24 @@
 <h2>Create User</h2>
 
 <form asp-action="Create" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Email">Email</label>
+        <label asp-for="Email" class="control-label">Email</label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="UserName">Username</label>
+        <label asp-for="UserName" class="control-label">Username</label>
         <input asp-for="UserName" class="form-control" />
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Password">Password</label>
+        <label asp-for="Password" class="control-label">Password</label>
         <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword">Confirm Password</label>
+        <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
         <input asp-for="ConfirmPassword" type="password" class="form-control" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
@@ -40,7 +41,9 @@
 
 
     <div class="form-group">
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         <input type="submit" value="Create" class="btn btn-outline-primary" />
     </div>
 </form>
+<p>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+</p>
