--- a/CMS/CMS.Web/Views/Register/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Register/Edit.cshtml
@@ -5,24 +5,25 @@
 <h2>Edit User</h2>
 
 <form asp-action="Edit" method="post" asp-route-id="@user.GetUserId(User)">
-    <input type="hidden" asp-for="RegisterrId" />
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group"><input type="hidden" asp-for="RegisterrId" /></div>
     <div class="form-group">
-        <label asp-for="Email">Email</label>
+        <label asp-for="Email" class="control-label">Email</label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="UserName">Username</label>
+        <label asp-for="UserName" class="control-label">Username</label>
         <input asp-for="UserName" class="form-control" />
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Password">Password</label>
+        <label asp-for="Password" class="control-label">Password</label>
         <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword">Confirm Password</label>
+        <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
         <input asp-for="ConfirmPassword" type="password" class="form-control" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
@@ -42,7 +43,7 @@
     </div>
 
     <div class="form-group">
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         <input type="submit" value="Save" class="btn btn-outline-primary" />
     </div>
 </form>
+<a class="btn btn-secondary" asp-action="Index">Back to List</a>
