Models Change 1 out of 2

--- a/CMS/CMS.Web/Views/Position/GetPositions.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetPositions.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CMS.Application.DTOs.PositionDTO>
+﻿@model IEnumerable<CMS.Application.DTOs.PositionDTO>
 
 <h1>Positions</h1>
 <p><a asp-action="AddPosition">add a new position</a></p>
