--- a/CMS/CMS.Web/Views/Dashboard/Index.cshtml
+++ b/CMS/CMS.Web/Views/Dashboard/Index.cshtml
@@ -1,3 +1,120 @@
 ﻿@{
     ViewData["Title"] = "Dashboard";
+    ViewData["additionalJS"] =new[]
+    {
+        "/theme/libs/apexcharts/apexcharts.min.js",
+        "/dashboard-js/jobx.js",
+        "/theme/libs/jsvectormap/js/jsvectormap.min.js",
+        "/theme/libs/jsvectormap/maps/world-merc.js",
+        "/dashboard-js/countries-hash.js",
+        "/dashboard-js/candidate-sources-map.js"
+    };
 }
+
+<div class="row">
+
+    <div class="col-md-4">
+        <div class="card card-animate">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <p class="fw-medium text-muted mb-0">Candidates</p>
+                        <h2 class="mt-4 ff-secondary fw-semibold"><span class="counter-value" data-target="28.05">28.05</span>k</h2>
+                    </div>
+                    <div>
+                        <div class="avatar-sm flex-shrink-0">
+                            <span class="avatar-title bg-info-subtle rounded-circle fs-2">
+                                <span class="ri-user-star-fill" style="color:#36a2dd;"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- end card body -->
+        </div> <!-- end card-->
+    </div>
+    <div class="col-xl-4 col-md-4">
+        <div class="card card-animate overflow-hidden">
+            <div class="position-absolute start-0" style="z-index: 0;">
+                <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120" width="200" height="120">
+                    <style>
+                        .s0 {
+                            opacity: .05;
+                            fill: var(--vz-success)
+                        }
+                    </style>
+                    <path id="Shape 8" class="s0" d="m189.5-25.8c0 0 20.1 46.2-26.7 71.4 0 0-60 15.4-62.3 65.3-2.2 49.8-50.6 59.3-57.8 61.5-7.2 2.3-60.8 0-60.8 0l-11.9-199.4z"></path>
+                </svg>
+            </div>
+            <div class="card-body" style="z-index:1 ;">
+                <div class="d-flex align-items-center">
+                    <div class="flex-grow-1 overflow-hidden">
+                        <p class="text-uppercase fw-medium text-muted text-truncate mb-3"> Accepted</p>
+                        <h4 class="fs-22 fw-semibold ff-secondary mb-0"><span class="counter-value" data-target="600">0</span></h4>
+                    </div>
+                    <div id="accepted-chart" data-percent="60"></div>
+                </div>
+            </div><!-- end card body -->
+        </div><!-- end card -->
+    </div>
+    <div class="col-md-4">
+        <div class="card card-animate">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <p class="fw-medium text-muted mb-0">Job Offers</p>
+                        <h2 class="mt-4 ff-secondary fw-semibold"><span class="counter-value" data-target="28.05">28.05</span>k</h2>
+                    </div>
+                    <div>
+                        <div class="avatar-sm flex-shrink-0">
+                            <span class="avatar-title bg-info-subtle rounded-circle fs-2">
+                                <span class="ri-award-fill" style="color:#36a2dd;"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- end card body -->
+        </div> <!-- end card-->
+    </div>
+
+</div>
+<div class="row">
+    <div class="col-xxl-4">
+        <!-- card -->
+        <div class="card card-height-100">
+            <div class="card-header align-items-center d-flex">
+                <h4 class="card-title mb-0 flex-grow-1">Jobs Views Location</h4>
+                
+            </div><!-- end card header -->
+            <!-- card body -->
+            <div class="card-body">
+                <div id="candidate-sources-map"
+                     data-locations="['Jordan','Morocco','Cuba']"></div>
+                <table class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Country Name</th>
+                            <th>Num of Candidates</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Jordan</td>
+                            <td>500</td>
+                        </tr>
+                        <tr>
+                            <td>Egypt</td>
+                            <td>300</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- end card body -->
+        </div>
+        <!-- end card -->
+    </div>
+</div>
+
+
+
+
