--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -22,11 +22,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DesiredPosition)
+            @Html.DisplayNameFor(model => model.PositionId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DesiredPosition)
+            @Html.DisplayFor(model => model.PositionId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Email)
