--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -9,8 +9,8 @@
     <dt class="col-sm-2">Phone:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.Phone)</dd>
 
-    <dt class="col-sm-2">DesiredPosition:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.DesiredPosition)</dd>
+    <dt class="col-sm-2">PositionId:</dt>
+    <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionId)</dd>
 
     <dt class="col-sm-2">Email:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
@@ -26,6 +26,8 @@
 
     <dt class="col-sm-2">CVAttachmentId:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.CVAttachmentId)</dd>
+    <dt class="col-sm-2">CVAttachmentId:</dt>
+    <dd class="col-sm-10">@Html.DisplayFor(model => model.CountryId)</dd>
 
     <!-- Add more details here as needed -->
 </dl>
