--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -12,16 +12,16 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
+            @Html.DisplayNameFor(model => model.CandidateId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
+            @Html.DisplayFor(model => model.CandidateId)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.PositionId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.PositionId)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.InterviewerId)
@@ -35,18 +35,18 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Date)
         </dd>
-        <dt class="col-sm-2" hidden>
+       @* <dt class="col-sm-2" hidden>
             @Html.DisplayNameFor(model => model.ParentId)
         </dt>
         <dd class="col-sm-10" hidden>
-            @Html.DisplayFor(model => model.ParentId)
+            @Html.DisplayFor(model => model.ParentId)*@
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Source)
+            @Html.DisplayNameFor(model => model.Score)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Source)
+            @Html.DisplayFor(model => model.Score)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
