--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model CMS.Application.DTOs.InterviewsDTO
+﻿@model CMS.Application.DTOs.InterviewViewDTO
 
 <h2>Details</h2>
 
@@ -11,19 +11,19 @@
             Candidate Name
         </dt>
         <dd class="col-sm-10">
-            @Model.FullName
+            @Model.CandidateName
         </dd>
         <dt class="col-sm-2">
-            Postion
+            Position
         </dt>
         <dd class="col-sm-10">
-            @Model.Name
+            @Model.PositionName
         </dd>
         <dt class="col-sm-2">
-            Interviewer ID
+            Interviewer Name
         </dt>
         <dd class="col-sm-10">
-            @Model.InterviewerId
+            @Model.InterviewerName
         </dd>
         <dt class="col-sm-2">
             Date
@@ -34,15 +34,15 @@
         <dt class="col-sm-2" hidden>
             Parent ID
         </dt>
-        <dd class="col-sm-10" hidden>
+       @* <dd class="col-sm-10" hidden>
             @Model.ParentId
-        </dd>
+        </dd>*@
 
         <dt class="col-sm-2">
             Score
         </dt>
         <dd class="col-sm-10">
-            @Model.Source
+            @Model.Score
         </dd>
         <dt class="col-sm-2">
             Status
