--- a/CMS/CMS.Web/Views/Candidates/Create.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Create.cshtml
@@ -25,8 +25,21 @@
                 
             </select>
         }
-@*  <input asp-for="DesiredPosition" class="form-control" autocomplete="off" />*@
+
         <span asp-validation-for="PositionId" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+
+        <label asp-for="CompanyId" class="control-label"></label>
+        @if (ViewBag.CompaniesDTOs != null)
+        {
+            <select asp-for="CompanyId" asp-items="@(ViewBag.CompaniesDTOs)" class="form-control">
+                <option value=""> company </option>
+
+            </select>
+        }
+
+        <span asp-validation-for="CompanyId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
