--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -12,6 +12,9 @@
     <dt class="col-sm-2">DesiredPosition:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.DesiredPosition)</dd>
 
+    <dt class="col-sm-2">Company:</dt>
+    <dd class="col-sm-10">@Html.DisplayFor(model => model.CompanyName)</dd>
+
     <dt class="col-sm-2">Email:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
 
@@ -31,6 +34,6 @@
 </dl>
 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CandidateId }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
