--- a/CMS/CMS.Web/Views/Candidates/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Edit Candidate</h2>
 
-<form asp-action="Edit" asp-route-id="@Model.CandidateId">
+<form asp-action="Edit" asp-route-id="@Model.Id">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="FullName" class="control-label"></label>
@@ -29,6 +29,23 @@
             </select>
         }
         <span asp-validation-for="PositionId" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+
+        <label asp-for="CompanyId" class="control-label"></label>
+        @if (ViewBag.CompaniesDTOs != null)
+        {
+            <select asp-for="CompanyId" class="form-control">
+                <option value=""> Company</option>
+                @foreach (var c in ViewBag.CompaniesDTOs)
+                {
+                    <option value="@c.Value" selected="@(c.Value == Model.CompanyId.ToString())">@c.Text</option>
+                }
+
+            </select>
+        }
+        <span asp-validation-for="CompanyId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -59,7 +76,7 @@
         <input type="submit" value="Save" class="btn btn-primary" />
     </div>
 </form>
-<form asp-action="UpdateAttachment" asp-route-id="@Model.CandidateId" enctype="multipart/form-data">
+<form asp-action="UpdateAttachment" asp-route-id="@Model.Id" enctype="multipart/form-data">
     <div class="form-group">
         <label for="file">Upload CV:</label>
         <input type="file" id="file" name="file" class="form-control-file" />
