--- a/CMS/CMS.Web/Views/Candidates/Index.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Index.cshtml
@@ -11,6 +11,7 @@
             <th>Full Name</th>
             <th>Phone Number</th>
             <th>Position</th>
+            <th>Company</th>
             <th>Email</th>
             <th>Address</th>
             <th>Experience</th>
@@ -27,6 +28,7 @@
                 <td>@Html.DisplayFor(modelItem => candidate.FullName)</td>
                 <td>@Html.DisplayFor(modelItem => candidate.Phone)</td>
                 <td>@Html.DisplayFor(modelItem => candidate.DesiredPosition)</td>
+                <td>@Html.DisplayFor(modelItem => candidate.CompanyName)</td>
                 <td>@Html.DisplayFor(modelItem => candidate.Email)</td>
                 <td>@Html.DisplayFor(modelItem => candidate.Address)</td>
                 <td>@Html.DisplayFor(modelItem => candidate.Experience)</td>
@@ -34,9 +36,9 @@
                 <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@candidate.CVAttachmentId">Download CV</a></td>
 
                 <td>
-                    <a asp-action="Edit" asp-route-id="@candidate.CandidateId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@candidate.CandidateId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@candidate.CandidateId">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@candidate.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@candidate.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@candidate.Id">Delete</a>
                 </td>
             </tr>
         }
