--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -11,13 +11,13 @@
             Candidate Name
         </dt>
         <dd class="col-sm-10">
-            @Model.CandidateName
+            @Model.FullName
         </dd>
         <dt class="col-sm-2">
             Postion
         </dt>
         <dd class="col-sm-10">
-            @Model.PositionName
+            @Model.Name
         </dd>
         <dt class="col-sm-2">
             Interviewer ID
@@ -62,6 +62,6 @@
 </div>
 <div class="form-group">
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-    <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
+   @* <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>*@
     
 </div>
