--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -1,10 +1,13 @@
-﻿@model CMS.Application.DTOs.InterviewsDTO
+﻿@using CMS.Domain.Enums;
+@model CMS.Application.DTOs.InterviewsDTO
 
 <h2>Update Interview Result</h2>
 
-<form asp-action="UpdateAfterInterview" method="post">
+<form asp-action="UpdateAfterInterview" id="updateForm" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="InterviewsId" />
+    <input type="hidden" asp-for="InterviewerId" />
+    <input type="hidden" asp-for="isUpdated"/>
 
     <div class="form-group">
         <label asp-for="Score">Score:</label>
@@ -18,15 +21,25 @@
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
     <div class="form-group">
+
         <label asp-for="StatusId" class="control-label">Status</label>
         @if (ViewBag.StatusDTOs != null)
         {
+          @*  <select asp-for="StatusId" asp-items="@(ViewBag.StatusDTOs)" class="form-control">
+                <option value="">Select a Status</option>
+
+            </select>*@
+
             <select asp-for="StatusId" class="form-control">
                 <option value="">Select a Status</option>
-                @foreach (var status in ViewBag.StatusDTOs)
+                @foreach (var sta in ViewBag.StatusDTOs)
                 {
-                    <option value="@status.Value" selected="@(status.Value == Model.StatusId.ToString())">@status.Text</option>
+                    if (sta.Text != StatusCode.GetName("PND"))
+                    {
+                        <option value="@sta.Value">@sta.Text</option>
+                    }
                 }
+                
             </select>
         }
         else
@@ -36,10 +49,31 @@
         <span asp-validation-for="StatusId" class="text-danger"></span>
 
     </div>
+    <div class="form-group">
+        <label for="file">Upload An evaluation:</label>
+        <input type="file" id="file" name="file" class="form-control-file" />
+    </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
 
-<a asp-action="Index">Back to Interview List</a>
+
+
+
+<a asp-action="MyInterviews">Back to Interview List</a>
 
 <p>@Html.ValidationSummary()</p>
+<script>
+    document.getElementById("updateForm").onsubmit = function () {
+        return confirmCreate();
+    };
+
+    function confirmCreate() {
+        if (confirm("Are you sure from the info you want to submit? it can not be modified")) {
+           
+            return true;
+        } else {
+            return false;
+        }
+    }
+</script>
