--- a/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
@@ -4,7 +4,7 @@
 
 <form asp-action="UpdatePosition">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group"><input type="hidden" asp-for="PositionId" /></div>
+    <div class="form-group"><input type="hidden" asp-for="Id" /></div>
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
         <input asp-for="Name" class="form-control" />
