--- a/CMS/CMS.Web/Views/Status/Add.cshtml
+++ b/CMS/CMS.Web/Views/Status/Add.cshtml
@@ -7,6 +7,11 @@
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="Code" class="control-label"></label>
+        <input asp-for="Code" class="form-control" />
+        <span asp-validation-for="Code" class="text-danger"></span>
+    </div>
  
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Add</button>
