--- a/CMS/CMS.Web/Views/Status/Get.cshtml
+++ b/CMS/CMS.Web/Views/Status/Get.cshtml
@@ -9,6 +9,7 @@
         <tr>
             <th>ID</th>
             <th>Status Name</th>
+            <th>Code</th>
           
         </tr>
     </thead>
@@ -18,6 +19,7 @@
             <tr>
                 <td>@s.Id</td>
                 <td>@s.Name</td>
+                <td>@s.Code</td>
                 
             </tr>
         }
